--- a/src/components/Edit/EditPanelTabs.css
+++ b/src/components/Edit/EditPanelTabs.css
@@ -5,8 +5,11 @@
     background-color: #262931;
     width: 100%;
     height: 45px;
-    overflow-x: auto;
+    overflow-x: scroll;
     overflow-y: hidden;
+    white-space: nowrap;
+    flex-wrap: nowrap;
+    display: flex;
 }
 .nav-tabs::-webkit-scrollbar {
     width: 0px;
@@ -63,4 +66,9 @@
     border: none;
     background-color: none;
     margin-bottom: 3px;
+}
+
+.edit-panel-tabs {
+    flex-wrap: nowrap !important;
+    width: 100%;
 }
